--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "node": "16"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "react": "^17.0.2",
